--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <!--style sheet-->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 <!--font awesome -->
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
@@ -65,7 +65,7 @@
     </div>
 
     <div class="col-lg-6">
-      <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
+      <img class="title-img" src="iphone6.png" alt="iphone-mockup">
     </div>
 </div>
 
@@ -106,7 +106,7 @@
       <div class="carousel-item active">
 
       <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-        <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile">
+        <img class="testimonial-img" src="dog-img.jpg" alt="dog-profile">
         <em>Pebbles, New York</em>
 
       </div>
@@ -114,7 +114,7 @@
 
 
       <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-       <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
+       <img class="testimonial-img" src="lady-img.jpg" alt="lady-profile">
        <em>Beverly, Illinois</em>
 
       </div>
@@ -140,10 +140,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="p-img" src="images/techcrunch.png" alt="tc-logo">
-    <img class="p-img" src="images/tnw.png" alt="tnw-logo">
-    <img class="p-img" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="p-img" src="images/mashable.png" alt="mashable-logo">
+    <img class="p-img" src="techcrunch.png" alt="tc-logo">
+    <img class="p-img" src="tnw.png" alt="tnw-logo">
+    <img class="p-img" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="p-img" src="mashable.png" alt="mashable-logo">
 
   </section>
 
