--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="p-img" src="techcrunch.png" alt="tc-logo">
+<!--     <img class="p-img" src="techcrunch.png" alt="tc-logo"> -->
     <img class="p-img" src="tnw.png" alt="tnw-logo">
     <img class="p-img" src="bizinsider.png" alt="biz-insider-logo">
     <img class="p-img" src="mashable.png" alt="mashable-logo">
